// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StaticItem /> shapshots should render empty 1`] = `
<button
  className="staticItem"
  onClick={[Function]}
  style={undefined}
/>
`;

exports[`<StaticItem /> shapshots should render with the given children 1`] = `
<button
  className="staticItem"
  onClick={[Function]}
  style={undefined}
>
  <div>
    child1
  </div>
  <div>
    child2
  </div>
</button>
`;
